# dhd_lib

./: README.md  temp.m
devel/: .catkin  setup.sh
src/dhd_lib/: CMakeLists.txt
src/dhd_lib/cmake/: FindDHDLibrary.cmake
src/dhd_lib/include/dhd_lib/: dhd.h  sigma7.h  utils.h
src/dhd_lib/include/dhd_sdk/doc/dhd/: deprecated.html  dhd_glossary.html  dhdc_8h.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  examples.html  files.html  globals.html  globals_c.html  globals_d.html  globals_defs.html  globals_e.html  globals_enum.html  globals_eval.html  globals_func.html  globals_g.html  globals_h.html  globals_i.html  globals_j.html  globals_k.html  globals_o.html  globals_p.html  globals_r.html  globals_s.html  globals_u.html  globals_w.html  hello_world_8cpp-example.html  index.html  multiple_devices_8cpp-example.html  pages.html  single_device_8cpp-example.html
src/dhd_lib/include/dhd_sdk/doc/drd/: dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  drd_glossary.html  drdc_8h.html  files.html  globals.html  globals_func.html  index.html  pages.html
src/dhd_lib/include/dhd_sdk/doc/licenses/: license.txt
src/dhd_lib/include/dhd_sdk/examples/: Makefile
src/dhd_lib/include/dhd_sdk/examples/CLI/autocenter/: autocenter.cpp
src/dhd_lib/include/dhd_sdk/examples/CLI/autoinit/: autoinit.cpp
src/dhd_lib/include/dhd_sdk/examples/CLI/center/: Makefile  Makefile.project  center.cpp
src/dhd_lib/include/dhd_sdk/examples/CLI/encoders/: encoders.cpp
src/dhd_lib/include/dhd_sdk/examples/CLI/gravity/: gravity.cpp
src/dhd_lib/include/dhd_sdk/examples/GLFW/: Makefile
src/dhd_lib/src/: dhd.cpp  sigma7.cpp  utils.cpp
src/dhd_test/: CMakeLists.txt  package.xml
src/dhd_test/include/: file_io.h  gui.h  main_ctrl.h
src/dhd_test/launch/: dhd_test.launch  test_sigma7.launch
src/dhd_test/matlab/: plotRecData.m
src/dhd_test/src/: file_io.cpp  gui.cpp  main.cpp  main_ctrl.cpp  multiple_devices.cpp
(+22 files in other folders)
